feat: Add font-light class for smaller font size in Poppins font family

--- a/src/theme.css
+++ b/src/theme.css
@@ -12,3 +12,8 @@
     font-family: 'Poppins', sans-serif;
   }
   
+
+  .font-light {
+    font-size: '10px';
+    font-family: 'Poppins', sans-serif;
+  }
