--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
 
 
 .light-mode {
@@ -26,9 +27,23 @@
     text-shadow: #000000;
     text-justify: inter-word;
     font-size: medium;
-    margin-top: 20px;
+    margin-top: 10px;
     line-height: 1.5;
   }
+
+  
+.customDropdown {
+  border-radius: 8px !important;
+  background-color: white;
+  border: 1px solid darkgray;
+  font-family: 'Poppins', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.5;
+  width: 250px;
+  height: 30px;
+}
+
 /* 
   html {
     scroll-behavior: smooth;
@@ -50,4 +65,10 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 30px;
     font-weight: 700;
+  }
+
+  .font-pixal {
+    font-family: 'Pixelify Sans', sans-serif;
+    font-size: 20px;
+    font-weight: 200;
   }
